feat: Implement candidate profile management with validation and types
- Added candidate profile validation schemas using Joi for creation and updates.
- Defined candidate and related types/interfaces for better type safety.
- Introduced work experience and skills types/interfaces for candidates.
- Created lookup service and controller for fetching countries, states, cities, job functions, and job skills.
- Established routes for candidate profile and lookup functionalities.
- Implemented image and document processing utilities using worker threads for performance.
- Added response utility functions for consistent API responses.
- Integrated error handling and validation utilities for improved robustness.
- Set up server with necessary middleware for security, logging, and rate limiting.
- Created a test script for verifying database connection and setup.
- Configured TypeScript with strict settings for better code quality.

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,73 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# ================================
+# Operating System Files
+# ================================
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.directory
+.Trash-*
+
+# ================================
+# IDE and Editor Files
+# ================================
+
+# VSCode
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# JetBrains IDEs (WebStorm, IntelliJ, etc.)
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# ================================
+# Project Specific
+# ================================
+
+# Uploaded files (should not be in version control)
+uploads/
+!uploads/.gitkeep
+
+# Database dumps
+*.sql
+*.sqlite
+*.db
+
+# Backup files
+*.bak
+*.backup
+*.old
