fix: update PM2 process name to rojgari-backend in deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,4 @@ jobs:
           git pull origin main
           npm install
           npm run build
-          pm2 restart admin-backend
+          pm2 restart rojgari-backend
