chore: add npm run db:migrate command

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "rebuild": "npm run clean && npm run build",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
+    "db:migrate": "node run_migration.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
