--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,5 +37,6 @@ jobs:
           git reset --hard
           git pull origin main
           npm install
+          npm run db:migrate
           npm run build
           pm2 restart rojgari-backend
